# NLP-newspapersAnalysis

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  api.html  data.html  genindex.html  index.html  objects.inv  pipelines.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: documentation.yml
_sources/: api.rst.txt  index.rst.txt
_static/: pygments.css
conf/: README.md  logging.yml
conf/base/: catalog.yml  logging.yml  parameters_cleaning_and_preprocessing.yml  parameters_eda.yml  parameters_feature_engineering.yml  parameters_sentiment_emotion_analysis.yml  parameters_topic_modeling.yml
docs/: Makefile  conf.py  data.md  data.rst  index.md  index.rst  make.bat  pipelines.md  pipelines.rst
notebooks/: 0-dataRetrieval.ipynb  0.0-aerv-data-retrieval.ipynb  0.1-aerv-dataCleaning.ipynb  0.2-aerv-exploratoty-data-analysis.ipynb  0.3-aerv-sentiment-analysis.ipynb  0.4-aerv-topic-modeling.ipynb  0.5-aerv-pipelines.ipynb  0.5-aerv-pipelines.py  0.6-aerv-specific-word.ipynb  1-dataCleaning.ipynb  2-exploratotyDataAnalysis.ipynb  3-sentimentAnalysis.ipynb  4-topicModeling.ipynb
references/: links.md
reports/: emotion-prob_bar-(2022, 35)-(2023, 3).html  emotion_bar-(2022, 35)-(2023, 3).html  gruvbox_colors.json  sentiment-prob-bar-(2022, 35)-(2023, 3).html  sentiment_bar-(2022, 35)-(2023, 3).html  top30_bar-(2022, 35)-(2023, 3).html
reports/tables/: 1-clean_stats-(2022, 35)-(2023, 3).csv  1-raw_stats-(2022, 35)-(2023, 3).csv  1-raw_stats.csv  raw_stats_summary-(2022, 35)-(2023, 3).csv  top30_stats_summary-(2022, 35)-(2023, 3).csv  words_tweets-(2022, 35)-(2023, 3).csv
src/data/: clean_dataset.py  conversation_retrieval.py  data_retrieval.py  make_dataset.py
src/features/: build_features.py  data_cleaning.py  feature_engineering.py
src/helpers/: io.py
src/newspapersAnalysis/: pipeline_registry.py  settings.py
src/newspapersAnalysis/pipelines/cleaning_and_preprocessing/: __init__.py  nodes.py
src/newspapersAnalysis/pipelines/eda/: __init__.py  nodes.py  pipeline.py
src/newspapersAnalysis/pipelines/feature_engineering/: nodes.py  pipeline.py
src/newspapersAnalysis/pipelines/sentiment_emotion_analysis/: nodes.py  pipeline.py
src/newspapersAnalysis/pipelines/topic_modeling/: __init__.py  nodes.py
src/nlp-newspapersAnalysis/pipelines/cleaning_and_preprocessing/: nodes.py  pipeline.py
src/nlp-newspapersAnalysis/pipelines/feature_engineering/: __init__.py  nodes.py  pipeline.py
src/nlp-newspapersAnalysis/pipelines/sentiment_emotion_analysis/: __init__.py
src/tests/pipelines/eda/: test_pipeline.py
src/visualization/: dashboard.py
tasks/: task_runner.py
(+6 files in other folders)
