[tool.poetry]
name = "newspapers-analysis"
version = "0.1.0"
description = "Project to analyse the change in news outlets coverage in time"
authors = ["drearondov <63360808+drearondov@users.noreply.github.com>"]
license = "UNLICENSED"
readme = "README.md"

[tool.poetry.plugins."kedro.hooks"]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
kedro = ">=0.18.14"
pandas = "^2.1.3"
requests = "^2.31.0"
spacy = "^3.7.2"
plotly = "^5.18.0"
textblob = "^0.17.1"
kaleido = "0.2.1"
pysentimiento = "^0.7.2"
gensim = "^4.3.2"
num2words = "^0.5.13"
kedro-datasets = "^1.8.0"

[tool.poetry.group.dev.dependencies]
coverage = ">=6.4.2"
ipython = ">=8.17.2"
myst-parser = ">=0.18.0"
Sphinx = ">=7.2.3"
python-dotenv = "^1.0.0"
types-requests = ">=2.28.11.13"
numpy = "^1.26.2"
ipykernel = "^6.26.0"
wordcloud = "^1.9.2"
furo = "^2023.9.10"

[tool.kedro]
package_name = "newspapersAnalysis"
project_name = "nlp-newspapersAnalysis"
kedro_init_version = "0.18.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
